--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <div id="root"></div>
-
+        <div id="info">
+            <div>Created with ❤️ in Stockholm.</div>
+            <div>©️ André Wisén & Louise Sjölund</div>
+            <a href="https://github.com/andrewisen-tikab/three-tunnel" target="_blank">GitHub</a>
+        </div>
         <script type="module" src="./main.tsx"></script>
     </body>
 </html>
