--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,10 @@
         <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>three-tunnel</title>
+        <title>Tunnel Sketcher</title>
+        <meta name="description" content="Tunnel and grouts sketcher" />
+        <meta name="keywords" content="Tunnel, Grout, Rock Engineering" />
+        <meta name="author" content="André Wisén, Louise Sjölund" />
     </head>
     <body>
         <div id="root"></div>
